Fix getSizeAsString test by using Locale (#3324)
(cherry picked from commit ae42d73236877aad61e443ed9bcd924745ebd419)